--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,79 @@
-h1 {
-  /*width: 928px;
-height: 144px;*/
-
+body {
   font-family: "Poppins", sans-serif;
   font-style: normal;
+  background-color: #272044;
+}
+
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("../images/image-header.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  text-align: center;
+  color: #ffffff;
+  padding: 200px 0;
+}
+
+header h1 {
   font-weight: 700;
   font-size: 96px;
-  line-height: 144px;
-  color: black;
+  line-height: 1;
+  margin: 30px 0;
+}
 
-  /* Inside auto layout 
-flex: none;
-order: 1;
-flex-grow: 0;*/
+header h2 {
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 1.5;
+  margin: 0;
+}
+
+header h3 {
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  margin: 0;
+}
+
+header a {
+  border: 1px solid black;
+  padding: 16px 32px;
+  text-decoration: none;
+  background: #ffffff;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
+  letter-spacing: 3px;
+  color: #272044;
+  display: inline-block;
+  margin-top: 32px;
+}
+
+footer {
+  text-align: center;
+}
+
+@media (max-width: 900px) {
+  header {
+    padding: 60px 0;
+  }
+
+  header h1 {
+    font-size: 48px;
+  }
+
+  header h2 {
+    font-size: 20px;
+  }
+
+  header h3 {
+    font-size: 12px;
+  }
 }
