--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,7 @@ body {
 section {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 100px 0;
 }
 
 header {
@@ -61,10 +62,53 @@ header a {
   margin-top: 32px;
 }
 
+main {
+  background-color: #000000;
+}
+
+main section {
+  color: #ffffff;
+}
+
+main section h2 {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  opacity: 0.3;
+  margin: 0;
+}
+
+main section h3 {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.5;
+  margin: 0;
+}
+
+main section p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  opacity: 0.5;
+}
+
 .grid {
   display: grid;
+
+  grid-gap: 64px;
+}
+
+.grid-2-columns {
+  grid-template-columns: 1fr 1fr;
+}
+
+.grid-3-columns-first-narrow {
   grid-template-columns: 1fr 2fr 2fr;
-  grid-gap: 80px;
+}
+
+.img-responsive {
+  max-width: 100%;
 }
 
 footer {
@@ -78,7 +122,6 @@ footer {
   background-size: cover;
   background-position: center;
   background-color: #272044;
-  padding: 100px 0;
 }
 
 footer h3 {
@@ -132,5 +175,14 @@ footer p {
 
   header h3 {
     font-size: 12px;
+  }
+
+  .grid {
+    grid-template-columns: 1fr;
+    grid-gap: 32px;
+  }
+
+  section {
+    padding: 30px;
   }
 }
