Added section cards

--- a/src/style.css
+++ b/src/style.css
@@ -9,12 +9,6 @@ body {
   margin: 0 auto;
 }
 
-section {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 100px 0;
-}
-
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url("../images/image-header.png");
@@ -63,7 +57,7 @@ header a {
 }
 
 main {
-  background-color: #000000;
+  background-color: #12101d;
 }
 
 main section {
@@ -86,11 +80,53 @@ main section h3 {
   margin: 0;
 }
 
+main h4 {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1;
+  margin: 0;
+}
+
+main h5 {
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 1;
+  margin: 0;
+}
+
 main section p {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   opacity: 0.5;
+}
+
+section {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 100px;
+}
+
+section.secondary {
+  background-color: #181525;
+}
+
+section.secondary img {
+  width: 185px;
+  height: 185px;
+}
+
+.btn {
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+  background: #462cb2;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
+  letter-spacing: 3px;
+  color: white;
+  display: block;
 }
 
 .grid {
@@ -103,12 +139,34 @@ main section p {
   grid-template-columns: 1fr 1fr;
 }
 
+.grid-3-columns {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
 .grid-3-columns-first-narrow {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
+.card {
+  background-color: #272435;
+  margin: 30px 0;
+}
+
+.card-body {
+  padding: 30px;
+}
+
+.card-footer {
+  padding: 0 30px 30px;
+}
+
 .img-responsive {
   max-width: 100%;
+  display: block;
+}
+
+.text-center {
+  text-align: center;
 }
 
 footer {
