--- a/src/style.css
+++ b/src/style.css
@@ -111,6 +111,10 @@ section.secondary {
   background-color: #181525;
 }
 
+section.third {
+  background-color: #12101d;
+}
+
 .btn {
   text-align: center;
   padding: 16px;
@@ -154,6 +158,10 @@ section.secondary {
 .embed {
   width: 100%;
   aspect-ratio: 1/1;
+}
+
+.films-embed {
+  margin: 30px 0;
 }
 
 .card-body {
