--- a/src/style.css
+++ b/src/style.css
@@ -56,6 +56,26 @@ header a {
   margin-top: 32px;
 }
 
+table {
+  color: #ffffff;
+  background-color: #353147;
+  border-radius: 4px;
+  border: 1px solid #342a5f;
+}
+
+thead {
+  background-color: #272435;
+}
+
+tbody {
+  text-align: center;
+}
+
+td {
+  border-top: 1px solid lightgray;
+  padding: 10px;
+}
+
 main {
   background-color: #12101d;
 }
@@ -195,6 +215,11 @@ footer p {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
+.table-container {
+  overflow-x: auto;
+  margin: 0px 100px 100px;
+}
+
 .card {
   background-color: #272435;
   margin: 30px 0;
@@ -253,6 +278,10 @@ footer p {
 
   section {
     padding: 30px;
+  }
+
+  .table-container {
+    margin: 0px 30px 100px;
   }
 
   .grid {
